<resources>
    <string name="app_name">MoviesU</string>
    <string name="home" translatable="false">Home</string>
    <string name="movies" translatable="false">MOVIES</string>
    <string name="streaming_and_tv" translatable="false">STREAMING &amp; TV</string>
    <string name="animation" translatable="false">Animation</string>
    <string name="watch_list" translatable="false">Watch List</string>
    <string name="music" translatable="false">Music</string>
    <string name="live" translatable="false">Live</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_splash" translatable="false">Splash</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string-array name="media">
        <item>Movies</item>
        <item>TV</item>
        <item>Anime movies</item>
        <item>Anime TV</item>
    </string-array>
    <string-array name="sortBy">
        <item>SORT BY</item>
        <item>Most popular</item>
        <item>Least  popular</item>
        <item>Recent</item>
        <item>Oldest</item>
        <item>Most rated</item>
        <item>Least rated</item>
        <item>Most vote</item>
        <item>Least vote</item>
    </string-array>
    <string-array name="desAsc">
        <item>Descending</item>
        <item>Ascending</item>
    </string-array>
    <string-array name="country">
        <item>COUNTRY</item>
        <item>Arabic</item>
        <item>China</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Russian</item>
        <item>Spanish</item>
        <item>Turkish</item>
    </string-array>
    <string-array name="countrySimpols">
        <item>simpols</item>
        <item>ar</item>
        <item>zh</item>
        <item>en</item>
        <item>fr</item>
        <item>de</item>
        <item>hi</item>
        <item>it</item>
        <item>ja</item>
        <item>ko</item>
        <item>ru</item>
        <item>es</item>
        <item>tr</item>
    </string-array>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="job">Job</string>
    <string name="person">Person</string>
    <string name="department">Department</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="user_nscore">User\nscore</string>
    <string name="overview">Overview</string>
    <string name="videos">Videos</string>
    <string name="seasons">Seasons</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="credits">Credits</string>
    <string name="recommendations">Recommendations</string>
    <string name="episode">Episode</string>
    <string name="name">Name</string>
    <string name="rated">Rated</string>
    <string name="reales_date">Reales Date</string>
    <string name="filter">Filter</string>
    <string name="see_all"><![CDATA[SEE ALL >>]]></string>
    <string name="trending">Trending</string>
    <string name="tv">TV</string>
    <string name="all">All</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="latest_trailers">Latest Trailers</string>
    <string name="most_popular_movies">Most Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="your_watch_list">Your Watch List</string>
    <string name="your_watch_list_is_empty">Your watch list is empty</string>
    <string name="swipe_left_or_right_to_remove">Swipe left or right to remove</string>
    <string name="the_music">The music</string>
    <string name="will_be_available_in_the_next_version">will be available in the next version</string>
    <string name="airing_today_tv">Airing Today TV</string>
    <string name="most_popular_tv">Most Popular TV</string>
    <string name="top_rated_tv">Top Rated TV</string>
    <string name="on_the_air_tv">On the air TV</string>
    <string name="no_internet">No Internet !</string>
    <string name="turn_on_wifi">TURN ON WIFI</string>
    <string name="try_again">Try Again</string>
    <string name="open_app">Open App</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="add_to_watch_list">Add to watch list</string>
    <string name="copy_movie_name">Copy movie name</string>
    <string name="connect">CONNECT</string>
    <string name="search">Search</string>
    <string name="the_trailer_is_not_available_now">The trailer is not available now</string>
    <string name="loading">Loading..</string>
    <string name="your_name">Your name</string>
    <string name="comment">Comment</string>
    <string name="added_comment">Added a comment</string>
    <string name="write_new_comment">Write new comment</string>
    <string name="write_your_comment_her">Write your comment her</string>
    <string name="clear_filter">Clear filter</string>
    <string name="trailers">Videos</string>
    <string name="cartoon">Cartoon</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="rate">Rate Now</string>
    <string name="please_rate">Please Rate this App!</string>
    <string name="no_thanks">No, thanks</string>
</resources>